--- a/mail/templates/mail/inbox.html
+++ b/mail/templates/mail/inbox.html
@@ -4,29 +4,29 @@
 {% block body %}
     <h2>{{ request.user.email }}</h2>
 
-    <button class="btn btn-sm btn-outline-primary" id="inbox">Inbox</button>
-    <button class="btn btn-sm btn-outline-primary" id="compose">Compose</button>
-    <button class="btn btn-sm btn-outline-primary" id="sent">Sent</button>
-    <button class="btn btn-sm btn-outline-primary" id="archived">Archived</button>
-    <a class="btn btn-sm btn-outline-primary" href="{% url 'logout' %}">Log Out</a>
+    <button class="btn btn-sm btn-outline-primary" id="inbox">Вхідні</button>
+    <button class="btn btn-sm btn-outline-primary" id="compose">Написати</button>
+    <button class="btn btn-sm btn-outline-primary" id="sent">Надіслані</button>
+    <button class="btn btn-sm btn-outline-primary" id="archived">Архів</button>
+    <a class="btn btn-sm btn-outline-primary" href="{% url 'logout' %}">Вийти</a>
     <hr>
 
     <div id="emails-view">
     </div>
 
     <div id="compose-view">
-        <h3>New Email</h3>
+        <h3>Написання листа</h3>
         <form id="compose-form">
             <div class="form-group">
-                From: <input disabled class="form-control" value="{{ request.user.email }}">
+                Від: <input disabled class="form-control" value="{{ request.user.email }}">
             </div>
             <div class="form-group">
-                To: <input id="compose-recipients" class="form-control">
+                Кому: <input id="compose-recipients" class="form-control">
             </div>
             <div class="form-group">
-                <input class="form-control" id="compose-subject" placeholder="Subject">
+                Тема: <input class="form-control" id="compose-subject">
             </div>
-            <textarea class="form-control" id="compose-body" placeholder="Body"></textarea>
+            <textarea class="form-control" id="compose-body" placeholder="Тіло листа"></textarea>
             <input type="submit" class="btn btn-primary"/>
         </form>
     </div>
