--- a/mail/templates/mail/login.html
+++ b/mail/templates/mail/login.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-    <h2>Login</h2>
+    <h2>Вхід</h2>
 
     {% if message %}
         <div>{{ message }}</div>
@@ -11,14 +11,14 @@
     <form action="{% url 'login' %}" method="post">
         {% csrf_token %}
         <div class="form-group">
-            <input autofocus class="form-control" type="email" name="email" placeholder="Email">
+            <input autofocus class="form-control" type="email" name="email" placeholder="Поштова скринька">
         </div>
         <div class="form-group">
-            <input class="form-control" type="password" name="password" placeholder="Password">
+            <input class="form-control" type="password" name="password" placeholder="Пароль">
         </div>
-        <input class="btn btn-primary" type="submit" value="Login">
+        <input class="btn btn-primary" type="submit" value="Увійти">
     </form>
 
-    Don't have an account? <a href="{% url 'register' %}">Register here.</a>
+    Немає акаунту? <a href="{% url 'register' %}">Зареєструйтесь!</a>
 
 {% endblock %}
