--- a/mail/templates/mail/register.html
+++ b/mail/templates/mail/register.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-    <h2>Register</h2>
+    <h2>Реєстрація</h2>
 
     {% if message %}
         <div>{{ message }}</div>
@@ -11,17 +11,17 @@
     <form action="{% url 'register' %}" method="post">
         {% csrf_token %}
         <div class="form-group">
-            <input class="form-control" type="email" name="email" placeholder="Email Address">
+            <input class="form-control" type="email" name="email" placeholder="Поштова скринька">
         </div>
         <div class="form-group">
-            <input class="form-control" type="password" name="password" placeholder="Password">
+            <input class="form-control" type="password" name="password" placeholder="Пароль">
         </div>
         <div class="form-group">
-            <input class="form-control" type="password" name="confirmation" placeholder="Confirm Password">
+            <input class="form-control" type="password" name="confirmation" placeholder="Підтвердити пароль">
         </div>
-        <input class="btn btn-primary" type="submit" value="Register">
+        <input class="btn btn-primary" type="submit" value="Зареєструвати">
     </form>
 
-    Already have an account? <a href="{% url 'login' %}">Log In here.</a>
+    Маєте акаунт? <a href="{% url 'login' %}">Увійдіть.</a>
 
 {% endblock %}
