--- a/mail/static/mail/styles.css
+++ b/mail/static/mail/styles.css
@@ -1,3 +1,10 @@
 textarea {
-    min-height: 400px;
+  min-height: 400px;
 }
+
+.inbox_list {
+  border: 2px solid black;
+  margin-bottom: 4px;
+  padding: 5px;
+}
+/*# sourceMappingURL=styles.css.map */
