--- a/mail/static/mail/styles.css
+++ b/mail/static/mail/styles.css
@@ -13,7 +13,7 @@ textarea {
   display: flex;
 }
 
-.display_div .inbox_div {
+.inbox_div {
   width: 90%;
   border: 2px solid black;
   padding: 5px;
