some progress with letter view

--- a/mail/templates/mail/inbox.html
+++ b/mail/templates/mail/inbox.html
@@ -33,9 +33,10 @@
     {% comment %} Перегляд листа {% endcomment %}
     <div id="letter-view">
         <div id='letter-info-div'>
-            <span id='from'>Від:</span><br>
-            <span id='to'>Кому:</span><br>
-            <span id='subject'>Тема:</span>
+            <span id='from'></span><br>
+            <span id='to'></span><br>
+            <span id='subject'></span><br>
+            <span id='timestamp'></span>
         </div>
         <hr>
         <div id='letter-body-div'>
