--- a/mail/templates/mail/inbox.html
+++ b/mail/templates/mail/inbox.html
@@ -36,7 +36,8 @@
             <span id='from'></span><br>
             <span id='to'></span><br>
             <span id='subject'></span><br>
-            <span id='timestamp'></span>
+            <span id='timestamp'></span><br>
+            <button id='answer'>Відповісти</button><br>
         </div>
         <hr>
         <div id='letter-body-div'>
