save point before coding

--- a/mail/static/mail/styles.scss
+++ b/mail/static/mail/styles.scss
@@ -16,3 +16,9 @@ textarea {
     border: 2px solid black;
     padding: 5px;
 }
+
+#body {
+    width: 100%;
+    border: none;
+    outline: none;
+}
