--- a/mail/templates/mail/inbox.html
+++ b/mail/templates/mail/inbox.html
@@ -41,7 +41,7 @@
         </div>
         <hr>
         <div id='letter-body-div'>
-            <p id='body'></p>
+            <textarea id='body' readonly></textarea>
         </div>
     </div>
 {% endblock %}
