--- a/mail/static/mail/styles.css
+++ b/mail/static/mail/styles.css
@@ -18,4 +18,10 @@ textarea {
   border: 2px solid black;
   padding: 5px;
 }
+
+#body {
+  width: 100%;
+  border: none;
+  outline: none;
+}
 /*# sourceMappingURL=styles.css.map */
