i can add some fonts

--- a/mail/static/mail/styles.scss
+++ b/mail/static/mail/styles.scss
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: 'mashine';
+    src: url(../fonts/a_OldTyperNr.ttf);
+}
+
 textarea {
     min-height: 400px;
 }
@@ -22,3 +27,4 @@ textarea {
     border: none;
     outline: none;
 }
+
