--- a/mail/templates/mail/inbox.html
+++ b/mail/templates/mail/inbox.html
@@ -33,11 +33,12 @@
     {% comment %} Перегляд листа {% endcomment %}
     <div id="letter-view">
         <div id='letter-info-div'>
+            <span id='from-text-before'>Від:</span>
             <span id='from'></span><br>
             <span id='to'></span><br>
             <span id='subject'></span><br>
             <span id='timestamp'></span><br>
-            <button id='answer'>Відповісти</button><br>
+            <button class="btn btn-sm btn-outline-primary" id='answer'>Відповісти</button><br>
         </div>
         <hr>
         <div id='letter-body-div'>
