some progress with main page styles

--- a/mail/static/mail/styles.css
+++ b/mail/static/mail/styles.css
@@ -21,6 +21,7 @@ textarea {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  font-family: 'mashine';
 }
 
 .inbox_div {
@@ -49,7 +50,7 @@ body {
 }
 
 #main_title_div {
-  height: 170px;
+  height: 145px;
   background-color: #a76d3cbd;
 }
 
@@ -58,5 +59,11 @@ body {
   font-family: 'mashine';
   text-align: center;
   margin-top: 20px;
+  margin-bottom: 15px;
+}
+
+h3 {
+  color: black;
+  font-family: 'mashine';
 }
 /*# sourceMappingURL=styles.css.map */
