--- a/mail/templates/mail/inbox.html
+++ b/mail/templates/mail/inbox.html
@@ -30,6 +30,7 @@
                 Тема: <input class="form-control" id="compose-subject">
             </div>
             <textarea class="form-control" id="compose-body" placeholder="Тіло листа"></textarea>
+            {% comment %} Типу textarea <div contenteditable='true'></div> {% endcomment %}
             <input type="submit" class="btn btn-primary"/>
         </form>
     </div>
