--- a/mail/static/mail/styles.scss
+++ b/mail/static/mail/styles.scss
@@ -35,6 +35,7 @@ textarea {
 .display_div {
     display: flex;
     font-family: 'mashine';
+    cursor: pointer;
 }
 
 .inbox_div {
@@ -65,7 +66,7 @@ body {
 
 #main_title_div{
     height: 145px;
-    background-color: #a76d3cbd;
+    background-color: #bb8557d1;
     
 }
 
@@ -93,13 +94,20 @@ h3 {
             font-family: 'first_male';
             font-size: 1.2rem;
             background-color: transparent;
+            color: #0101f1cf;
         }
         
     }
 }
 
+// #compose-body, #compose-subject{
+//     color: #0101f1cf;
+// }
+
 #compose-body {
     font-family: 'first_male';
     font-size: 1.5rem;
     background-color: transparent;
+    resize: none;
+    color: #0101f1cf;
 }
