--- a/mail/static/mail/styles.css
+++ b/mail/static/mail/styles.css
@@ -90,9 +90,10 @@ h3 {
 
 #compose-form {
   background-image: url(../images/paper.jpg);
-  padding-left: 30px;
-  padding-right: 30px;
-  padding-top: 30px;
+  padding-left: 40px;
+  padding-right: 40px;
+  padding-top: 40px;
+  padding-bottom: 20px;
 }
 
 #compose-form div input {
