--- a/mail/static/mail/styles.scss
+++ b/mail/static/mail/styles.scss
@@ -86,9 +86,10 @@ h3 {
 
 #compose-form {
     background-image: url(../images/paper.jpg);
-    padding-left: 30px;
-    padding-right: 30px;
-    padding-top: 30px;
+    padding-left: 40px;
+    padding-right: 40px;
+    padding-top: 40px;
+    padding-bottom: 20px;
     div {
         input {
             font-family: 'first_male';
