--- a/mail/static/mail/styles.css
+++ b/mail/static/mail/styles.css
@@ -103,11 +103,48 @@ h3 {
   color: #0101f1cf;
 }
 
+#compose-form div span {
+  font-family: 'mashine';
+}
+
 #compose-body {
   font-family: 'first_male';
   font-size: 1.5rem;
   background-color: transparent;
   resize: none;
   color: #0101f1cf;
+}
+
+#letter-info-div {
+  background-image: url(../images/letter_backgound.jpg);
+  background-size: cover;
+  width: 380px;
+  height: 267px;
+  padding-top: 75px;
+  padding-left: 20px;
+}
+
+#letter-info-div .text-before {
+  font-family: 'mashine';
+  color: #000000d6;
+}
+
+#letter-info-div span {
+  font-family: 'first_male';
+  color: #0101f1cf;
+}
+
+#body {
+  background-image: url(../images/paper.jpg);
+  padding-left: 40px;
+  padding-right: 40px;
+  padding-top: 40px;
+  padding-bottom: 20px;
+  font-family: 'first_male';
+  font-size: 1.5rem;
+  resize: none;
+  color: #0101f1cf;
+  margin-bottom: 60px;
+  min-height: 600px;
 }
 /*# sourceMappingURL=styles.css.map */
