--- a/mail/static/mail/styles.scss
+++ b/mail/static/mail/styles.scss
@@ -135,9 +135,10 @@ h3 {
 
 #body {
     background-image: url(../images/paper.jpg);
-    padding-left: 40px;
+    background-color: transparent;
+    padding-left: 55px;
     padding-right: 40px;
-    padding-top: 40px;
+    padding-top: 50px;
     padding-bottom: 20px;
     font-family: 'first_male';
     font-size: 1.5rem;
