--- a/mail/static/mail/styles.scss
+++ b/mail/static/mail/styles.scss
@@ -147,3 +147,17 @@ h3 {
     margin-bottom: 60px;
     min-height: 600px;
 }
+
+.login-div {
+    font-family: 'mashine';
+    margin-top: 15%;
+    h2, span {
+        color: black;
+    }
+    span, a {
+        font-size: 1.2rem;
+    }
+    a {
+        color: #006ffd;;
+    }
+}
