--- a/mail/templates/mail/register.html
+++ b/mail/templates/mail/register.html
@@ -2,26 +2,28 @@
 
 {% block body %}
 
-    <h2>Реєстрація</h2>
-
-    {% if message %}
-        <div>{{ message }}</div>
-    {% endif %}
-
-    <form action="{% url 'register' %}" method="post">
-        {% csrf_token %}
-        <div class="form-group">
-            <input class="form-control" type="email" name="email" placeholder="Поштова скринька">
-        </div>
-        <div class="form-group">
-            <input class="form-control" type="password" name="password" placeholder="Пароль">
-        </div>
-        <div class="form-group">
-            <input class="form-control" type="password" name="confirmation" placeholder="Підтвердити пароль">
-        </div>
-        <input class="btn btn-primary" type="submit" value="Зареєструвати">
-    </form>
-
-    Маєте акаунт? <a href="{% url 'login' %}">Увійдіть.</a>
+    <div class='login-div'>
+        <h2>Реєстрація</h2>
+    
+        {% if message %}
+            <div>{{ message }}</div>
+        {% endif %}
+    
+        <form action="{% url 'register' %}" method="post">
+            {% csrf_token %}
+            <div class="form-group">
+                <input class="form-control" type="email" name="email" placeholder="Поштова скринька">
+            </div>
+            <div class="form-group">
+                <input class="form-control" type="password" name="password" placeholder="Пароль">
+            </div>
+            <div class="form-group">
+                <input class="form-control" type="password" name="confirmation" placeholder="Підтвердити пароль">
+            </div>
+            <input class="btn btn-primary" type="submit" value="Зареєструвати">
+        </form>
+    
+        <span>Маєте акаунт?</span> <a href="{% url 'login' %}">Увійдіть.</a>
+    </div>
 
 {% endblock %}
