--- a/mail/static/mail/styles.scss
+++ b/mail/static/mail/styles.scss
@@ -151,6 +151,8 @@ h3 {
 .login-div {
     font-family: 'mashine';
     margin-top: 15%;
+    background-color: #bdbd91d1;
+    padding: 20px;
     h2, span {
         color: black;
     }
