--- a/mail/templates/mail/inbox.html
+++ b/mail/templates/mail/inbox.html
@@ -45,7 +45,7 @@
             <span id='subject'></span><br>
             <span id='timestamp-text-before' class='text-before'>Час:</span>
             <span id='timestamp'></span><br>
-            <button class="btn btn-sm btn-outline-primary" id='answer'>Відповісти</button><br>
+            <button class="btn btn-primary btn-sm" id='answer'>Відповісти</button><br>
         </div>
         <hr>
         <div id='letter-body-div'>
