--- a/mail/static/mail/styles.scss
+++ b/mail/static/mail/styles.scss
@@ -23,6 +23,34 @@
     src: url(../fonts/male2.ttf);
 }
 
+
+@media (max-width: 530px){
+    #main_title {
+        font-size: 1.7rem;
+    }
+    #main_title_div{
+        height: 98px;
+    }
+}
+
+@media (min-width: 531px) and (max-width: 767px){
+    #main_title {
+        font-size: 2.5rem;
+    }
+    #main_title_div{
+        height: 130px;
+    }
+}
+
+@media (min-width: 768px){
+    #main_title {
+        font-size: 2.8rem;
+    }
+    #main_title_div{
+        height: 145px;
+    }
+}
+
 textarea {
     min-height: 400px;
 }
@@ -60,14 +88,12 @@ body {
     text-align: center;
     color: black;
     margin-bottom: 100px;
-    font-size: 2.8rem;
+    // font-size: 2.8rem;
     font-weight: 500;
 }
 
 #main_title_div{
-    height: 145px;
     background-color: #bb8557d1;
-    
 }
 
 #your_email {
@@ -160,6 +186,6 @@ h3 {
         font-size: 1.2rem;
     }
     a {
-        color: #006ffd;;
+        color: #006ffd;
     }
 }
