--- a/mail/static/mail/styles.css
+++ b/mail/static/mail/styles.css
@@ -28,6 +28,22 @@
   src: url(../fonts/male2.ttf);
 }
 
+@media (max-width: 400px) {
+  #letter-info-div {
+    width: 328px;
+    height: 229px;
+    padding-top: 60px;
+  }
+}
+
+@media (min-width: 401px) {
+  #letter-info-div {
+    width: 380px;
+    height: 267px;
+    padding-top: 75px;
+  }
+}
+
 @media (max-width: 530px) {
   #main_title {
     font-size: 1.7rem;
@@ -73,6 +89,24 @@
   }
 }
 
+@media (max-width: 991px) {
+  .top-buttons-div {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .top-buttons-div button {
+    margin-left: 2px;
+    margin-right: 2px;
+  }
+  .top-buttons-div :last-child {
+    margin-left: 2px;
+  }
+}
+
 textarea {
   min-height: 400px;
 }
@@ -86,6 +120,13 @@ textarea {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
   font-family: 'mashine';
   cursor: pointer;
 }
@@ -100,7 +141,7 @@ textarea {
 }
 
 .inbox_div {
-  width: 90%;
+  width: 100%;
   border: 2px solid black;
   padding: 5px;
 }
@@ -170,9 +211,6 @@ h3 {
 #letter-info-div {
   background-image: url(../images/letter_backgound.jpg);
   background-size: cover;
-  width: 380px;
-  height: 267px;
-  padding-top: 75px;
   padding-left: 20px;
 }
 
@@ -222,5 +260,15 @@ h3 {
 
 h4 {
   font-weight: bold;
+}
+
+#letter-view {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 /*# sourceMappingURL=styles.css.map */
