--- a/mail/static/mail/styles.css
+++ b/mail/static/mail/styles.css
@@ -140,6 +140,11 @@ textarea {
   font-weight: bold;
 }
 
+.display_div button {
+  margin-left: 2px;
+  margin-top: 2px;
+}
+
 .inbox_div {
   width: 100%;
   border: 2px solid black;
