--- a/mail/static/mail/styles.scss
+++ b/mail/static/mail/styles.scss
@@ -117,6 +117,11 @@ textarea {
     p {
         font-weight: bold;
     }
+
+    button {
+        margin-left: 2px;
+        margin-top: 2px;
+    }
 }
 
 .inbox_div {
