--- a/mail/static/mail/styles.scss
+++ b/mail/static/mail/styles.scss
@@ -4,7 +4,7 @@
 }
 @font-face {
     font-family: 'title_font';
-    src: url(../fonts/Ekaterina_Velikaya_One.ttf);
+    src: url(../fonts/VivaldiD_CL.ttf);
 }
 @font-face {
     font-family: 'first_female';
@@ -44,7 +44,7 @@
 
 @media (max-width: 530px){
     #main_title {
-        font-size: 1.7rem;
+        font-size: 2.5rem;
     }
     #main_title_div{
         height: 98px;
@@ -68,7 +68,7 @@
 
 @media (min-width: 531px) and (max-width: 767px){
     #main_title {
-        font-size: 2.5rem;
+        font-size: 3.5rem;
     }
     #main_title_div{
         height: 130px;
@@ -81,7 +81,7 @@
 
 @media (min-width: 768px){
     #main_title {
-        font-size: 2.8rem;
+        font-size: 4rem;
     }
     #main_title_div{
         height: 145px;
@@ -166,7 +166,7 @@ body {
     color: black;
     // margin-bottom: 100px;
     // font-size: 2.8rem;
-    margin-top: 25px;
+    // margin-top: 25px;
     font-weight: 500;
 }
 
