--- a/mail/static/mail/styles.css
+++ b/mail/static/mail/styles.css
@@ -249,4 +249,8 @@ h3 {
 
 h4 {
   font-weight: bold;
+}
+
+#alert-placeholder div {
+  text-align: center;
 }/*# sourceMappingURL=styles.css.map */
