--- a/mail/static/mail/styles.scss
+++ b/mail/static/mail/styles.scss
@@ -280,3 +280,9 @@ h4 {
 //     flex-direction: column;
 //     align-items: center;
 // }
+
+#alert-placeholder {
+    div {
+        text-align: center;
+    }
+}
