--- a/mail/templates/mail/inbox.html
+++ b/mail/templates/mail/inbox.html
@@ -7,6 +7,7 @@
     </div>
     <h2 id='your_email'>{{ request.user.email }}</h2>
 
+
     <div class='top-buttons-div'>
         <button class="btn btn-primary btn-sm" id="inbox">Вхідні</button>
         <button class="btn btn-primary btn-sm" id="compose">Написати</button>
@@ -15,6 +16,7 @@
         <a class="btn btn-primary btn-sm" href="{% url 'logout' %}">Вийти</a>
     </div>
     <hr>
+    <div id="alert-placeholder"></div>
 
     <div id="emails-view">
     </div>
@@ -26,7 +28,7 @@
                 <span>Від:</span> <input disabled class="form-control" value="{{ request.user.email }}">
             </div>
             <div class="form-group">
-                <span>Кому:</span> <input id="compose-recipients" class="form-control" autocomplete="off">
+                <span>Кому:</span> <input id="compose-recipients" class="form-control" type="email" autocomplete="off">
             </div>
             <div class="form-group">
                 <span>Тема:</span> <input class="form-control" id="compose-subject" autocomplete="off">
