--- a/mail/templates/mail/register.html
+++ b/mail/templates/mail/register.html
@@ -12,13 +12,13 @@
         <form action="{% url 'register' %}" method="post">
             {% csrf_token %}
             <div class="form-group">
-                <input class="form-control" type="email" name="email" placeholder="Поштова скринька">
+                <input class="form-control" type="email" name="email" placeholder="Поштова скринька" required>
             </div>
             <div class="form-group">
-                <input class="form-control" type="password" name="password" placeholder="Пароль">
+                <input class="form-control" type="password" name="password" placeholder="Пароль" required>
             </div>
             <div class="form-group">
-                <input class="form-control" type="password" name="confirmation" placeholder="Підтвердити пароль">
+                <input class="form-control" type="password" name="confirmation" placeholder="Підтвердити пароль" required>
             </div>
             <input class="btn btn-primary" type="submit" value="Зареєструвати">
         </form>
